<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.KeysFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dev_keys_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dev_keys_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_keys_title"
        android:layout_marginTop="@dimen/full_bezel"
        android:layout_marginStart="@dimen/full_bezel"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/full_bezel"
        android:layout_marginStart="@dimen/full_bezel"
        android:layout_marginEnd="@dimen/full_bezel"
        android:hint="@string/private_key_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dev_keys_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/full_bezel"
        android:layout_marginStart="@dimen/full_bezel"
        android:layout_marginEnd="@dimen/full_bezel"
        android:hint="@string/public_key_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dev_keys_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_keys_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/full_bezel"
        android:layout_marginStart="@dimen/full_bezel"
        android:text="@string/save_label"/>

</LinearLayout>